server: update API to include hits, lastAccessedAt, remove expires, update tests to work with new API
