# server/src/models/urlRecord.ts
@@ -3,37 +3,42 @@ import {
   InferAttributes,
   Model,
   InferCreationAttributes,
+  CreationOptional,
 } from "sequelize";
 import db from "../db";
 
 // This is how you create a Sequelize Model as of Sequelize >=6.14.0
 // https://sequelize.org/docs/v6/other-topics/typescript/#usage
-export class Url extends Model<
-  InferAttributes<Url>,
-  InferCreationAttributes<Url>
+export class UrlRecord extends Model<
+  InferAttributes<UrlRecord>,
+  InferCreationAttributes<UrlRecord>
 > {
   declare slug: string;
   declare longUrl: string;
-  declare expires: Date;
+  declare hits: CreationOptional<number>;
+  declare lastAccessedAt: CreationOptional<Date>;
 }
 
-Url.init(
+UrlRecord.init(
   {
     slug: {
       type: DataTypes.STRING,
       allowNull: false,
-      // slug and expires are unique together
-      primaryKey: true,
-    },
-    expires: {
-      type: DataTypes.DATE,
-      allowNull: false,
-      // slug and expires are unique together
       primaryKey: true,
     },
     longUrl: {
       type: DataTypes.TEXT,
       allowNull: false,
+    },
+    hits: {
+      type: DataTypes.INTEGER,
+      allowNull: false,
+      defaultValue: 0,
+    },
+    lastAccessedAt: {
+      type: DataTypes.DATE,
+      allowNull: true,
+      defaultValue: null,
     },
   },
   {
